
[project]
name = "dataset-analyser"
version = "0.1.0"
description = "a python dataset analyser"
authors = [
    {name = "frakizan", email = "frahhsartori280819@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
